Fix T73186: Grease Pencil convert to Curve hidden until exiting edit mode

The converted object wasn't tagged for updating its geometry in the
dependency graph.